--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mixin-deep": "1.3.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-prism": "^4.3.2",
+    "react-scripts": "3.2.0",
+    "set-value": "2.0.1",
+    "showdown": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
