--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-prism": "^4.3.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "set-value": "2.0.1",
     "showdown": "^1.9.1"
